# interfinops

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 14be7903fc36_add_kpi_targets.py  2b46c7cb743e_initial_schema.py  53ba19d05ef6_add_chart_of_accounts.py
backend/app/: config.py  database.py  main.py
backend/app/api/: deps.py
backend/app/api/routes/: auth.py  budget.py  chart_of_accounts.py  commentary.py  dashboard.py  esg.py  financial_data.py  fixed_assets.py  hr.py  kpis.py  reconciliation.py  sites.py  targets.py  upload.py
backend/app/models/: __init__.py  audit_log.py  budget.py  chart_of_accounts.py  dashboard_config.py  financial_data.py  fx_rate.py  site.py  target.py  user.py
backend/app/schemas/: auth.py  budget.py  chart_of_accounts.py  dashboard.py  financial.py  site.py  target.py
backend/app/services/: audit.py  auth.py  consolidation.py  kpi.py  upload.py
backend/app/utils/: currency.py
backend/scripts/: seed.py  seed_all.py  seed_coa.py  seed_targets.py
backend/tests/: conftest.py
deploy/: Dockerfile.backend  Dockerfile.frontend  nginx.conf
deploy/scripts/: backup.sh  deploy.sh  setup-server.sh
docs/compliance/: AI_USAGE_DISCLOSURE.md  COOKIE_NOTICE.md  DATA_PROCESSING_AGREEMENT.md  DPIA_HR_PAYROLL.md  INCIDENT_RESPONSE_PLAN.md  PRIVACY_POLICY.md  README.md  RECORD_OF_PROCESSING.md  (+2 more)
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
(+49 files in other folders)
